# CMakeList.txt : CMake project for FileSplicer, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("FileSplicer")

# Add source to this project's executable.
add_executable (FileSplicer "FileSplicer.cpp" "FileSplicer.h")

# TODO: Add tests and install targets if needed.
